# proc-macro-warning

./: CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deny_warnings.yml
src/: lib.rs
