[package]
name = "proc_macro_warning"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Custom warnings for procedural macros on stable Rust, with likely upgrade path to proc macro diagnostics."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/proc_macro_warning"
homepage = "https://github.com/Tamschi/proc_macro_warning/tree/v0.0.1"
documentation = "https://docs.rs/proc_macro_warning/0.0.1"
keywords = [] # TODO
categories = [] # TODO
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
]
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/proc_macro_warning" }
is-it-maintained-open-issues = { repository = "Tamschi/proc_macro_warning" }
maintenance = { status = "experimental" }

[features]
nightly = ["proc-macro2/proc-macro"]

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
version-sync = "0.9.1"

[dependencies]
proc-macro2 = { version = "1.0.24", default-features = false }
quote = "1.0.7"
rustversion = "1.0.4"
